--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+    padding-bottom: 500px;
+}
+
 .container {
     background-color: #eef;
     border: 2px solid red;
@@ -17,4 +21,11 @@
     border: 2px solid blue;
     height: 50px;
     width: 50px;
+}
+
+.box {
+    background-color: #ccc;
+    border: 2px solid blue;
+    height: 50px;
+    flex-basis: 30px;
 }
