colocando o menu fixo

--- a/css/flexboxpratica.css
+++ b/css/flexboxpratica.css
@@ -24,7 +24,7 @@ a:hover {
 header {
     background-color: #fff;
     width: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     display: flex;
