--- a/css/flexboxpratica.css
+++ b/css/flexboxpratica.css
@@ -31,6 +31,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px 50px;
+    box-shadow: 1px 1px 5px #c3c63b;
 }
 
 header img {
